# vibescanner

./: .gitignore  LICENSE  README.md  pyproject.toml
vibescanner/: __init__.py  cli.py  detectors.py  report.py  scanner.py
