[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vibescanner"
version = "0.1.0"
description = "Forensic CLI scanner that detects AI-generated (vibecoded) web projects"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Will Roberts" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
vibescanner = "vibescanner.cli:main"

[project.urls]
Homepage = "https://github.com/wheel-is/vibescanner"
Issues = "https://github.com/wheel-is/vibescanner/issues"
